# sums_over_primes

./: .gitignore  special_primes.cabal
Math/NT/: Conditions.hs  PrimeCounter.hs  Primes.hs  Tools.hs
chebotarev/: #Main.hs#  Main.hs
pM1_divisors/: Main.hs
