name:                pmodq
version:             0.1.0.0
synopsis:            N/A
-- description:         
homepage:            N/A
license:             MIT
license-file:        LICENSE
author:              Gideon J Providence
maintainer:          g@math.utoronto.ca
-- copyright:           
category:            Math
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:     Math.NT.PrimeCounter, Math.NT.Primes
  build-depends:       base ==4.6.*

--executable chebotarev
--  hs-source-dirs: chebotarev
--  main-is:        Main.hs
--  build-depends:  base ==4.6.*

executable pM1_divisors
  hs-source-dirs: pM1_divisors
  main-is:        Main.hs
  build-depends:  base ==4.6.*, pmodq